# palmistry

./: Cargo.toml  README.md
examples/: equity_bench.rs  perf.rs
src/: batch.rs  bitboard.rs  card.rs  equity.rs  evaluator.rs  lib.rs  lut13.rs  score.rs
